// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MostRead should render with ltr most read with correct dir 1`] = `
.c2 {
  display: inline;
}

.c8 {
  color: #222222;
  font-size: 1.125rem;
  line-height: 1.375rem;
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-left: 1rem;
}

.c6 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 300;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c3 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c0 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #3F3F42;
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    width: calc(3/6*(100% - 6 * 0.5rem) + 2 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c4 {
    width: calc(4/8*(100% - 8 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c4 {
    width: calc(4/20*(100% - 20 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c4 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.25rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:80rem) {
  .c7 {
    padding-top: 0.5rem;
    padding-left: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c3 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 1.5rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.25rem;
  }
}

<div>
  <section
    aria-labelledby="most-read-title"
    class=""
    role="region"
  >
    <h2
      class="c0"
      dir="ltr"
      id="most-read-title"
    >
      Most Read
    </h2>
  </section>
  <ol
    class="c1"
    role="list"
  >
    <div
      class="c2 c3"
      dir="ltr"
    >
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            1
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            2
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            3
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            4
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            5
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            6
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            7
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            8
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            9
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="ltr"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            10
          </span>
          <div
            class="c7"
            dir="ltr"
          >
            <a
              class="c8"
              href="https://www.bbc.co.uk/news/business-43328806"
            >
              John Lewis staff bonus cut again as profits fall
            </a>
          </div>
        </li>
      </div>
    </div>
  </ol>
</div>
`;

exports[`MostRead should render with rtl most read with correct dir 1`] = `
.c2 {
  display: inline;
}

.c8 {
  color: #222222;
  font-size: 1.5rem;
  line-height: 2rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover,
.c8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c7 {
  padding-bottom: 1.5rem;
  padding-right: 1rem;
}

.c6 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #B80000;
  font-size: 2rem;
  line-height: 2.25rem;
  margin: 0;
  padding: 0;
  display: inline-block;
  width: 3rem;
}

.c1 {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c3 {
  grid-auto-flow: column;
  grid-template-rows: repeat( 5,[col-start] auto [col-end] );
}

.c0 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.5rem;
  line-height: 2.125rem;
  color: #3F3F42;
}

@supports (display:grid) {
  .c2 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c4 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c4 {
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c4 {
    width: calc(3/6*(100% - 6 * 0.5rem) + 2 * 0.5rem );
    margin: 0 0.25rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c4 {
    width: calc(3/6*(100% - 6 * 1rem) + 2 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:80rem) {
  .c4 {
    width: calc(4/8*(100% - 8 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c4 {
    width: calc(4/20*(100% - 20 * 1rem) + 3 * 1rem );
    margin: 0 0.5rem;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c4 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.625rem;
    line-height: 2.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.75rem;
    line-height: 2.25rem;
  }
}

@media (min-width:80rem) {
  .c7 {
    padding-top: 0.5rem;
    padding-right: 2rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c6 {
    font-size: 2.5rem;
    line-height: 2.75rem;
  }
}

@media (min-width:37.5rem) {
  .c6 {
    font-size: 3.5rem;
    line-height: 3.75rem;
  }
}

@media (max-width:24.9375rem) {
  .c3 {
    grid-template-rows: repeat( 10,[col-start] auto [col-end] );
  }
}

@media (min-width:80rem) {
  .c3 {
    grid-auto-flow: row;
    grid-template-rows: repeat( 5,[col-start] auto [col-end] );
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c0 {
    font-size: 2rem;
    line-height: 2.375rem;
  }
}

@media (min-width:37.5rem) {
  .c0 {
    font-size: 2.25rem;
    line-height: 3.125rem;
  }
}

<div>
  <section
    aria-labelledby="most-read-title"
    class=""
    role="region"
  >
    <h2
      class="c0"
      dir="rtl"
      id="most-read-title"
    >
      الأكثر قراءة
    </h2>
  </section>
  <ol
    class="c1"
    role="list"
  >
    <div
      class="c2 c3"
      dir="rtl"
    >
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۱
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۲
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۳
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۴
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۵
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۶
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۷
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۸
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۹
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
      <div
        as="li"
        class="c4"
        dir="rtl"
      >
        <li
          class="c5"
        >
          <span
            class="c6"
          >
            ۱۰
          </span>
          <div
            class="c7"
            dir="rtl"
          >
            <a
              class="c8"
              href="https://www.bbc.com/persian/iran-46965704"
            >
              ایران از لغو 'رزمایش قطع اینترنت' خبر داد
            </a>
          </div>
        </li>
      </div>
    </div>
  </ol>
</div>
`;
